Fixed Some CSS Overflow issues in Collab page when accesed on mobile device and Modified Track Search Item's Width

--- a/src/css/Collab.css
+++ b/src/css/Collab.css
@@ -86,6 +86,13 @@
         display: flex;
         flex-direction: column;
     }
+
+    .collab-playlist .collab-result .playlist .playlist-tracks {
+        display: flex;
+        overflow-x: scroll;
+        width: 100%;
+        padding: 0px;
+    }
     
     .collab-playlist .collab-result .playlist {
         display: grid;
@@ -99,6 +106,5 @@
     .collab-playlist .playlist .delete-btn {
         display: none;
     }
-
 
 }
